--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
@@ -56,8 +56,7 @@
                                 :disabled="Boolean({{ readonly }})"
                                 :group-select="false"
                                 group-values="tags"
-                                group-label="title"
-                            >
+                                group-label="title">
                                 <template v-slot:option="props">
                                     <span {% verbatim %}v-if="props.option.$isLabel"{% endverbatim %}>
                                         {% verbatim %}{{ props.option.$groupLabel }}{% endverbatim %}
