--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_released_group.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_released_group.html.twig
@@ -61,7 +61,7 @@
                             {{ 'statements.marked.submit'|trans }}
                         </template>
 
-                        <template>
+                        <template v-slot:default>
                             {#  Hint and select for notifying country about statement being submitted #}
                             {% include '@DemosPlanStatement/DemosPlanStatement/includes/list_statement_nofity_contries.html.twig' with {
                                 showDropdown: hasPermission('feature_statement_notify_counties') and proceduresettings.settings.sendMailsToCounties == true,
