--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_original_view.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_original_view.html.twig
@@ -28,8 +28,7 @@
                 limits: JSON.parse('{{ templateVars.pager.limits|default([])|json_encode }}'),
                 total: parseInt('{{ templateVars.totalResults|default(0) }}')
             }"
-            procedure-id="{{ templateVars.table.procedure.ident }}"
-        >
+            procedure-id="{{ templateVars.table.procedure.ident }}">
             <template v-slot:filter="{ allItemsOnPageSelected, procedureId, copyStatements }">
                 {# filters + sorting #}
                 {% include '@DemosPlanAssessmentTable/DemosPlan/dhtml/v1/assessment_table_original_filter.html.twig' %}
