--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_data.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_data.html.twig
@@ -1287,17 +1287,17 @@
                                     v-model="selectedCounties"
                                     @input="sortSelected('Counties')"
                                     track-by="id"
-                                    label="name"
-                                >
+                                    label="name">
                                     <template v-slot:option="props">
                                         {% verbatim %}{{ props.option.name }}{% endverbatim %}
                                     </template>
+
                                     <template v-slot:tag="props">
-                                    <span class="multiselect__tag">
-                                        {%  verbatim %}{{ props.option.name }}{%  endverbatim %}
-                                        <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
-                                        <input type="hidden" :value="props.option.id" name="r_counties[]"/>
-                                    </span>
+                                        <span class="multiselect__tag">
+                                            {%  verbatim %}{{ props.option.name }}{%  endverbatim %}
+                                            <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
+                                            <input type="hidden" :value="props.option.id" name="r_counties[]"/>
+                                        </span>
                                     </template>
                                 </dp-multiselect>
                             </div>
@@ -1313,6 +1313,7 @@
                                 <strong class="layout__item u-1-of-4 display--block u-mb-0_25">
                                     {{ "municipalities"|trans }}
                                 </strong>
+
                                 {% if statement.municipalities is defined %}
                                     {% if statement.municipalities|default(false) != false %}
                                         <ul class="o-list o-list--csv layout__item u-1-of-1 u-mb-0_5 color--grey">
@@ -1339,17 +1340,17 @@
                                     v-model="selectedMunicipalities"
                                     @input="sortSelected('Municipalities')"
                                     track-by="id"
-                                    label="name"
-                                >
+                                    label="name">
                                     <template v-slot:option="props">
                                         {% verbatim %}{{ props.option.name }}{% endverbatim %}
                                     </template>
+
                                     <template v-slot:tag="props">
-                                    <span class="multiselect__tag">
-                                        {% verbatim %}{{ props.option.name }}{% endverbatim %}
-                                        <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
-                                        <input type="hidden" :value="props.option.id" name="r_municipalities[]"/>
-                                    </span>
+                                        <span class="multiselect__tag">
+                                            {% verbatim %}{{ props.option.name }}{% endverbatim %}
+                                            <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
+                                            <input type="hidden" :value="props.option.id" name="r_municipalities[]"/>
+                                        </span>
                                     </template>
                                 </dp-multiselect>
                             </div>
@@ -1391,17 +1392,17 @@
                                     v-model="selectedPriorityAreas"
                                     @input="sortSelected('PriorityAreas')"
                                     track-by="id"
-                                    label="name"
-                                >
+                                    label="name">
                                     <template v-slot:option="props">
                                         {% verbatim %}{{ props.option.name }}{% endverbatim %}
                                     </template>
+
                                     <template v-slot:tag="props">
-                                    <span class="multiselect__tag">
-                                        {% verbatim %}{{ props.option.name }}{% endverbatim %}
-                                        <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
-                                        <input type="hidden" :value="props.option.id" name="r_priorityAreas[]"/>
-                                    </span>
+                                        <span class="multiselect__tag">
+                                            {% verbatim %}{{ props.option.name }}{% endverbatim %}
+                                            <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
+                                            <input type="hidden" :value="props.option.id" name="r_priorityAreas[]"/>
+                                        </span>
                                     </template>
                                 </dp-multiselect>
                             </div>
