--- a/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_admin_gislayer_list.html.twig
+++ b/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_admin_gislayer_list.html.twig
@@ -130,14 +130,17 @@
          --><div class="layout__item u-3-of-4 text--right">
 
                 <dp-split-button>
-                    <a
-                        :class="{'has-dropdown':hasPermission('feature_map_category')}"
-                        class="btn btn--primary"
-                        data-cy="createNewGisLayer"
-                        href="{{ path('DemosPlan_map_administration_gislayer_new',{'procedure':procedure}) }}">
-                        {{ "gislayer.create"|trans }}
-                    </a><!--
-                 --><template
+                    <template v-slot:default>
+                        <a
+                            :class="{'has-dropdown':hasPermission('feature_map_category')}"
+                            class="btn btn--primary"
+                            data-cy="createNewGisLayer"
+                            href="{{ path('DemosPlan_map_administration_gislayer_new',{'procedure':procedure}) }}">
+                            {{ "gislayer.create"|trans }}
+                        </a>
+                    </template>
+
+                    <template
                         v-slot:dropdown
                         v-if="hasPermission('feature_map_category')">
                         <a href="{{ path('DemosPlan_map_administration_gislayer_category_new',{'procedureId':procedure}) }}">
