--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit.html.twig
@@ -170,17 +170,16 @@
                                         v-model="selectedAgencies"
                                         data-cy="selectedAgencies"
                                         label="name"
-                                        track-by="id"
-                                    >
+                                        track-by="id">
                                         <template v-slot:option="props">
                                             {% verbatim %}{{ props.option.name }}{% endverbatim %}
                                         </template>
                                         <template v-slot:tag="props">
-                                        <span class="multiselect__tag">
-                                            {% verbatim %}{{ props.option.name }}{% endverbatim %}
-                                            <i aria-hidden="true" @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
-                                            <input type="hidden" :value="props.option.id" name="r_agency[]"/>
-                                        </span>
+                                            <span class="multiselect__tag">
+                                                {% verbatim %}{{ props.option.name }}{% endverbatim %}
+                                                <i aria-hidden="true" @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
+                                                <input type="hidden" :value="props.option.id" name="r_agency[]"/>
+                                            </span>
                                         </template>
                                     </dp-multiselect>
 
@@ -246,8 +245,7 @@
                                         :options="JSON.parse('{{ dataInputOrgas|default([])|json_encode|e('js', 'utf-8') }}')"
                                         v-model="selectedDataInputOrgas"
                                         label="name"
-                                        track-by="id"
-                                    >
+                                        track-by="id">
                                         <template v-slot:option="props">
                                             {% verbatim %}{{ props.option.name }}{% endverbatim %}
                                         </template>
@@ -895,11 +893,11 @@
                                                 {% verbatim %}{{ props.option.name }}{% endverbatim %}
                                             </template>
                                             <template v-slot:tag="props">
-                                                    <span class="multiselect__tag">
-                                                        {% verbatim %}{{ props.option.name }}{% endverbatim %}
-                                                        <i aria-hidden="true" @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
-                                                        <input type="hidden" :value="props.option.id" name="r_procedure_categories[]"/>
-                                                    </span>
+                                                <span class="multiselect__tag">
+                                                    {% verbatim %}{{ props.option.name }}{% endverbatim %}
+                                                    <i aria-hidden="true" @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
+                                                    <input type="hidden" :value="props.option.id" name="r_procedure_categories[]"/>
+                                                </span>
                                             </template>
                                         </dp-multiselect>
                                         <input v-if="selectedProcedureCategories.length === 0" type="hidden" value="" name="r_procedure_categories" />
