--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_master.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_master.html.twig
@@ -53,17 +53,17 @@
                             v-model="selectedAgencies"
                             @input="sortSelected('Agencies')"
                             track-by="id"
-                            label="name"
-                        >
+                            label="name">
                             <template v-slot:option="props">
                                 {% verbatim %}{{ props.option.name }}{% endverbatim %}
                             </template>
+
                             <template v-slot:tag="props">
-                            <span class="multiselect__tag">
-                                {%  verbatim %}{{ props.option.name }}{%  endverbatim %}
-                                <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
-                                <input type="hidden" :value="props.option.id" name="r_agency[]"/>
-                            </span>
+                                <span class="multiselect__tag">
+                                    {%  verbatim %}{{ props.option.name }}{%  endverbatim %}
+                                    <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
+                                    <input type="hidden" :value="props.option.id" name="r_agency[]"/>
+                                </span>
                             </template>
                         </dp-multiselect>
                 {% endblock %}
@@ -92,6 +92,7 @@
                         <template v-slot:option="props">
                             {% verbatim %}{{ props.option.name }}{% endverbatim %}
                         </template>
+
                         <template v-slot:tag="props">
                             <span class="multiselect__tag">
                                 {%  verbatim %}{{ props.option.name }}{%  endverbatim %}
