--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_list_filter.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_list_filter.html.twig
@@ -94,22 +94,24 @@
                                 {{ 'filter.fragments'|trans }}
                             </template>
 
-                            <div class="layout__item u-1-of-2 u-pr" v-for="group in filterGroups">
-                                <fieldset>
-                                    <legend class="u-pb">
-                                        {% verbatim %}{{ Translator.trans(group.groupLabel) }}{% endverbatim %}
-                                    </legend>
-                                    {% for filter in templateVars.definition.interfaceFilters|default([]) %}
-                                        {% for filterOption in filter.values|default([]) %}
-                                            {% for mustFilter in templateVars.definition.filters.must %}
-                                                {% if filter.name == mustFilter.field and filterOption.value == mustFilter.value %}
-                                                    {{ mustFilter.value }}
-                                                {% endif %}
+                            <template v-slot:default>
+                                <div class="layout__item u-1-of-2 u-pr" v-for="group in filterGroups">
+                                    <fieldset>
+                                        <legend class="u-pb">
+                                            {% verbatim %}{{ Translator.trans(group.groupLabel) }}{% endverbatim %}
+                                        </legend>
+
+                                        {% for filter in templateVars.definition.interfaceFilters|default([]) %}
+                                            {% for filterOption in filter.values|default([]) %}
+                                                {% for mustFilter in templateVars.definition.filters.must %}
+                                                    {% if filter.name == mustFilter.field and filterOption.value == mustFilter.value %}
+                                                        {{ mustFilter.value }}
+                                                    {% endif %}
+                                                {% endfor %}
                                             {% endfor %}
                                         {% endfor %}
-                                    {% endfor %}
-                                    <template v-for="filter in group.values">
-                                        <template v-if="filter.hasPermission">
+
+                                        <template v-for="filter in (filter.hasPermission ? group.values : [])">
                                             <label :for="filter.name" class="layout__item u-1-of-4 u-pl-0 text--right">
                                                 {% verbatim %}{{ Translator.trans(filter.title) }}{% endverbatim %}
                                             </label>
@@ -118,31 +120,31 @@
                                                     multiple
                                                     :options="Object.values(filter.values)"
                                                     v-model="userSelection[stripRaw(filter.name)]"
-                                                    track-by="value"
-                                                >
+                                                    track-by="value">
                                                     <template v-slot:option="props">
                                                         {% verbatim %}{{ props.option.label }} ({{ Translator.trans(props.option.count) }}){% endverbatim %}
                                                     </template>
+
                                                     <template v-slot:tag="props">
-                                        <span class="multiselect__tag">
-                                            {% verbatim %}{{ props.option.label }} ({{ Translator.trans(props.option.count) }}){% endverbatim %}
-                                            <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
-                                            <input type="hidden" :value="props.option.value" :name="filter.name + '[]'"/>
-                                        </span>
+                                                        <span class="multiselect__tag">
+                                                            {% verbatim %}{{ props.option.label }} ({{ Translator.trans(props.option.count) }}){% endverbatim %}
+                                                            <i aria-hidden="true"  @click="props.remove(props.option)" tabindex="1" class="multiselect__tag-icon"></i>
+                                                            <input type="hidden" :value="props.option.value" :name="filter.name + '[]'"/>
+                                                        </span>
                                                     </template>
                                                 </dp-multiselect>
                                             </div>
                                         </template>
-                                    </template>
-                                </fieldset>
-                            </div>
+                                    </fieldset>
+                                </div>
 
-                            <div class="text--right space-inline-s">
-                                <input class="btn btn--primary" type="submit" value="{{ "apply"|trans }}">
-                                <a class="btn btn--secondary" href="{{ path( backpath ) }}?resetForm=1">
-                                    {{ "reset"|trans }}
-                                </a>
-                            </div>
+                                <div class="text--right space-inline-s">
+                                    <input class="btn btn--primary" type="submit" value="{{ "apply"|trans }}">
+                                    <a class="btn btn--secondary" href="{{ path( backpath ) }}?resetForm=1">
+                                        {{ "reset"|trans }}
+                                    </a>
+                                </div>
+                            </template>
                         </dp-modal>
                     </div>
                 </dp-fragment-list-filter-modal>
