--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
@@ -37,6 +37,7 @@
                     for="r_email_body"
                     text="{{ 'email.body'|trans }}">
                 </dp-label>
+
                 <dp-editor
                     id="r_email_body"
                     hidden-input="r_email_body"
@@ -45,7 +46,10 @@
                         linkButton: true
                     }"
                     required
-                    value="{{ 'customer.settings.update.mail.default.text'|trans({ termsOfUseUrl: urlBase ~ path('DemosPlan_misccontent_static_terms'), dataProtectionUrl: urlBase ~ path('DemosPlan_misccontent_static_dataprotection') }) }}">
+                    value="{{ 'customer.settings.update.mail.default.text'|trans({
+                        termsOfUseUrl: urlBase ~ path('DemosPlan_misccontent_static_terms'),
+                        dataProtectionUrl: urlBase ~ path('DemosPlan_misccontent_static_dataprotection')
+                    }) }}">
                     <template v-slot:modal="modalProps">
                         <dp-boiler-plate-modal
                             ref="boilerPlateModal"
@@ -54,6 +58,7 @@
                             @insert="text => modalProps.handleInsertText(text)">
                         </dp-boiler-plate-modal>
                     </template>
+
                     <template v-slot:button>
                         <button
                             class="{{ 'menubar__button'|prefixClass }}"
