--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/list_departments.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/list_departments.html.twig
@@ -144,7 +144,7 @@
                         data-cy="departmentList"
                         class="o-list__item u-p-0_5 u-pl-0"
                         ref="table-card-{{ department.ident }}">
-                        <template v-slot:header="">
+                        <template v-slot:header>
                             <div class="layout__item">
                                 {% if hasPermission('feature_department_delete') %}
                                     <input
@@ -169,38 +169,39 @@
                                 </div>
                             </div>
                         </template>
-                        <aside class="layout__item">
-                            <label class="u-mv-0_5">
-                                <p class="u-mb-0_25">
-                                    {{ "department.name"|trans }}*
-                                </p>
-                                <input
-                                    class="layout__item u-1-of-2"
-                                    style="height: 28px;"
-                                    name="{{ department.ident }}:name"
-                                    type="text"
-                                    value="{{ department.name|default() }}"
-                                    data-cy="editDepartment">
-                            </label>
+                        <template v-slot:default>
+                            <aside class="layout__item">
+                                <label class="u-mv-0_5">
+                                    <p class="u-mb-0_25">
+                                        {{ "department.name"|trans }}*
+                                    </p>
+                                    <input
+                                        class="layout__item u-1-of-2"
+                                        style="height: 28px;"
+                                        name="{{ department.ident }}:name"
+                                        type="text"
+                                        value="{{ department.name|default() }}"
+                                        data-cy="editDepartment">
+                                </label>
 
-                            <div class="text--right space-inline-s">
-                                <button
-                                    class="btn btn--primary"
-                                    type="submit"
-                                    name="manageDepartments"
-                                    value="save:{{ department.ident|default() }}"
-                                    data-cy="saveEditDepartment">
-                                    {{ "save"|trans }}
-                                </button>
-                                <input
-                                    class="btn btn--secondary color--white"
-                                    type="reset"
-                                    value="{{ "abort"|trans }}"
-                                    @click="$refs['table-card-{{ department.ident }}'].toggle(false)">
-                            </div>
+                                <div class="text--right space-inline-s">
+                                    <button
+                                        class="btn btn--primary"
+                                        type="submit"
+                                        name="manageDepartments"
+                                        value="save:{{ department.ident|default() }}"
+                                        data-cy="saveEditDepartment">
+                                        {{ "save"|trans }}
+                                    </button>
+                                    <input
+                                        class="btn btn--secondary color--white"
+                                        type="reset"
+                                        value="{{ "abort"|trans }}"
+                                        @click="$refs['table-card-{{ department.ident }}'].toggle(false)">
+                                </div>
 
-                        </aside>
-
+                            </aside>
+                        </template>
                     </dp-table-card>
 
                 {% endfor %}
